[Fixes #170] Prevent scrollbars from ever appearing on pane nav headers
Also format CSS.

--- a/css/small.css
+++ b/css/small.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: auto;
   overflow-x: auto;
   overflow-y: auto;
